--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -3,8 +3,13 @@ block content
   main.centered
     h1!=product.title
     div
-      img(src='product.image' alt!=product.title)
+      img(
+        src!=product.image,
+        alt!=product.title
+      )
     h2!=product.price
     p!=product.description
-    form(action='/cart' method='POST')
-      button.btn(type='submit') Add to cart
+    include ./../includes/add-to-cart
+
+
+
