Basic sql added

--- a/views/admin/product-edit.pug
+++ b/views/admin/product-edit.pug
@@ -6,7 +6,7 @@ block content
       input(name='title', type='text', id='title', required value!=product.title)
     .form-control
       label(for='image') Image url
-      input(name='image', type='text', id='image', required value!=product.image)
+      input(name='imageUrl', type='text', id='image', required value!=product.imageUrl)
     .form-control
       label(for='price') Price
       input(name='price', type='text', id='price', required value!=product.price)
