--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -4,7 +4,7 @@ block content
     h1!=product.title
     div
       img(
-        src!=product.image,
+        src!=product.imageUrl,
         alt!=product.title
       )
     h2!=product.price
